@@ -35,103 +35,134 @@ this exception to your version of the library, but you are not
 obligated to do so.  If you do not wish to do so, delete this
 exception statement from your version. */
 
+
 package javax.swing;
 
 import javax.swing.event.ChangeListener;
 
 /**
- * BoundedRangeModel
- * @author	Andrew Selkirk
- * @version	1.0
+ * @author Andrew Selkirk
  */
-public interface BoundedRangeModel {
+public interface BoundedRangeModel
+{
+  /**
+   * getValue
+   * 
+   * @return int
+   *
+   * @see #setValue(int)
+   */
+  int getValue();
 
-	//-------------------------------------------------------------
-	// Methods ----------------------------------------------------
-	//-------------------------------------------------------------
+  /**
+   * setValue
+   * 
+   * @param value the value
+   *
+   * @see #getValue()
+   */
+  void setValue(int value);
 
-	/**
-	 * getValue
-	 * @returns int
-	 */
-	int getValue();
+  /**
+   * getMinimum
+   * 
+   * @return int
+   *
+   * @see #setMinimum(int)
+   */
+  int getMinimum();
 
-	/**
-	 * setValue
-	 * @param value TODO
-	 */
-	void setValue(int value);
+  /**
+   * setMinimum
+   * 
+   * @param minimum the minimum value
+   *
+   * @see #getMinimum()
+   */
+  void setMinimum(int minimum);
 
-	/**
-	 * getMinimum
-	 * @returns int
-	 */
-	int getMinimum();
+  /**
+   * getMaximum
+   * 
+   * @return int
+   *
+   * @see #setMaximum(int)
+   */
+  int getMaximum();
 
-	/**
-	 * setMinimum
-	 * @param minimum TODO
-	 */
-	void setMinimum(int minimum);
+  /**
+   * setMaximum
+   * 
+   * @param maximum the maximum value
+   *
+   * @see #getMaximum()
+   */
+  void setMaximum(int maximum);
 
-	/**
-	 * getMaximum
-	 * @returns int
-	 */
-	int getMaximum();
+  /**
+   * Returns the value of the <code>valueIsAdjusting</code> property.
+   * 
+   * @return <code>true</code> if value is adjusting,
+   * otherwise <code>false</code>
+   *
+   * @see setValueIsAdjusting(boolean)
+   */
+  boolean getValueIsAdjusting();
 
-	/**
-	 * setMaximum
-	 * @param maximum TODO
-	 */
-	void setMaximum(int maximum);
+  /**
+   * setValueIsAdjusting
+   * 
+   * @param adjusting <code>true</code> if adjusting,
+   * <code>false</code> otherwise
+   *
+   * @see #getValueIsAdjusting()
+   */
+  void setValueIsAdjusting(boolean adjusting);
 
-	/**
-	 * getValueIsAdjusting
-	 * @returns boolean
-	 */
-	boolean getValueIsAdjusting();
+  /**
+   * Returns the current extent.
+   *
+   * @return the extent
+   *
+   * @see #setExtent(int)
+   */
+  int getExtent();
 
-	/**
-	 * setValueIsAdjusting
-	 * @param adjusting TODO
-	 */
-	void setValueIsAdjusting(boolean adjusting);
+  /**
+   * setExtent
+   * 
+   * @param extent the extent
+   *
+   * @see #getExtent()
+   */
+  void setExtent(int extent);
 
-	/**
-	 * getExtent
-	 * @returns int
-	 */
-	int getExtent();
+  /**
+   * setRangeProperties
+   * @param value the value
+   * @param extent the extent
+   * @param minnimum the minimum value
+   * @param maximum the maximum value
+   * @param adjusting TODO
+   */
+  void setRangeProperties(int value, int extent, int minimum, int maximum,
+			  boolean adjusting);
 
-	/**
-	 * setExtent
-	 * @param extent TODO
-	 */
-	void setExtent(int extent);
+  /**
+   * Adds a <code>ChangeListener</code> to this object.
+   * 
+   * @param listener the listener to add
+   * 
+   * @see #removeChangeListener(javax.swing.event.ChangeListener)
+   */
+  void addChangeListener(ChangeListener listener);
 
-	/**
-	 * setRangeProperties
-	 * @param value TODO
-	 * @param extent TODO
-	 * @param min TODO
-	 * @param max TODO
-	 * @param adjusting TODO
-	 */
-	void setRangeProperties(int value, int extent, int min, 
-					int max, boolean adjusting);
-
-	/**
-	 * addChangeListener
-	 * @param listener TODO
-	 */
-	void addChangeListener(ChangeListener listener);
-
-	/**
-	 * removeChangeListener
-	 * @param listener TODO
-	 */
-	void removeChangeListener(ChangeListener listener);
-
-
-} // BoundedRangeModel
+  /**
+   * Removes a <code>ChangeListener</code> from this object.
+   * 
+   * @param listener the listener to remove
+   *
+   * @see #addChangeListener(javax.swing.event.ChangeListener)
+   */
+  void removeChangeListener(ChangeListener listener);
+}
